# Neural_Hamilton_old

./: .gitignore  Cargo.toml  README.md  analyze.py  analyze_best.py  main.py  requirements.txt  run.py
neural_hamilton/: data.py  model.py  train.py  utils.py
notebook/: bound.ipynb  bound_analysis.ipynb  bound_bidirectional_rnn.ipynb  bound_rnn.ipynb  bound_transformer.ipynb  bound_vae.ipynb  pod-bound.ipynb  training.ipynb
src/: main.rs
src/grave/: main.rs  main2.rs
