[package]
name = "neural_hamilton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { version = "0.17.8", features = ["rayon"] }
peroxide = { version = "0.37.3", features = ["plot", "parquet"] }
rayon = "1.10.0"
rugfield = "0.2.1"
